# flight

./: db.sqlite3  pyproject.toml  requirements_dev.txt
flight/: asgi.py  settings.py  urls.py  wsgi.py
flightapp/: models.py
flightapp/migrations/: 0001_initial.py
