[tool.poetry]
name = "flight"
version = "0.1.0"
description = "using the cs50 we dev"
authors = ["yuenfu001 <64754712+yuenfu001@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
